...

String getFormStateHeader(WranglerFormState formState) {
  switch (formState) {
    case WranglerFormState.add:
      return "Add";
    case WranglerFormState.edit:
      return "Edit";
    case WranglerFormState.view:
      return "View";
    default:
      return "View";
  }
}
...
